fix: delegations display labels/translations

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -31,7 +31,10 @@ api_tokens_list_scope_off,Nein,No,
 api_tokens_list_scope_on,Ja,Yes,
 api_tokens_list_scope_read,Lesen,Read,
 api_tokens_list_scope_write,Schreiben,Write,
+app_autocomplete_displayname_users,Nutzer/innen,Users,
+app_autocomplete_displayname_delegations,Verantwortungs-Gruppen,Responsibility groups,
 app_autocomplete_no_results,Keine Ergebnisse.,No results.,
+app_autocomplete_user_delegation_postfix, (Verantwortungs-Gruppe), (Responsibility group)
 app_confirm_form_leave_msg,"Diese Seite bittet Sie zu bestätigen, dass Sie die Seite verlassen möchten. Daten, die Sie eingegeben haben, werden unter Umständen nicht gespeichert.",Please confirm that you wish to leave this page – entered data might not be saved.,NOTE: German version copied from Firefox default message
 app_notice_admin_mode_on,Admin-Modus aktiviert!,Admin mode activated!,
 app_notice_admin_mode_off,Admin-Modus deaktiviert!,Admin mode deactivated!,
@@ -734,7 +737,7 @@ transfer_responsibility_person_will_receive_2,", behalten folgende Berechtigunge
 transfer_responsibility_submit,Übertragen,Transfer,
 transfer_responsibility_success_collection,Sie haben die Verantwortlichkeit für das Set erfolgreich übertragen.,You have successfully transferred responsibility for the set.,
 transfer_responsibility_success_media_entry,Sie haben die Verantwortlichkeit für den Medieneintrag erfolgreich übertragen.,You have successfully transferred responsibility for the media entry.,
-transfer_responsibility_title,Verantwortlichkeit auf folgende/n Nutzer/in oder Delegation übertragen,Transfer responsibility to the following user or delegation,
+transfer_responsibility_title,Verantwortlichkeit auf folgende/n Nutzer/in oder Verantwortungs-Gruppe übertragen,Transfer responsibility to the following user or responsibility group,
 usage_data_created_at,Erstellt am,Created on,
 usage_data_import_at,Importiert am,Imported on,
 usage_data_import_by,Importiert durch,Imported by,
@@ -808,7 +811,7 @@ workflow_common_settings_permissions_add_user,Nutzer/innen hinzufügen,Add user,
 workflow_common_settings_permissions_read_public,Öffentlicher Zugriff (Internet),Public access (Internet),
 workflow_common_settings_permissions_read,Nur Leserechte,Only reading permissions,
 workflow_common_settings_permissions_responsible,Verantwortliche Person(en),Responsible user,
-workflow_common_settings_permissions_select_owner,Nutzer/innen oder Delegationen auswählen,Select user or delegation,
+workflow_common_settings_permissions_select_owner,Nutzer/innen oder Verantwortungs-Gruppen auswählen:,Select user or responsibility group,
 workflow_common_settings_permissions_select_user,Nutzer/innen auswählen,Select user,
 workflow_common_settings_permissions_title,Berechtigungen,Permissions,
 workflow_common_settings_permissions_write,Schreib- und Leserechte,Read and write permissions,
