feat: add 'visible to API clients' filter

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -194,12 +194,17 @@ dashboard_create_media_entry_btn,Medien importieren,Upload media,
 dashboard_none_exist,Keine vorhanden.,There are none.,
 dashboard_show_all,Alle anzeigen,Show all,
 dashboard_title_head,Mein Archiv,My archive,
+dynamic_filters_any_values_title,Jegliche Werte,Any values,
 dynamic_filters_authorization,Berechtigung,Authorization,
 dynamic_filters_visibility,Sichtbarkeit,Accessability,
 dynamic_filters_visibility_private,Nur für mich,Only for me,
 dynamic_filters_visibility_user_or_group,Geteilt mit Personen und Arbeitsgruppen,Shared with people and work groups,
 dynamic_filters_person_header,Personen,Persons,
+dynamic_filters_remove_all_title,Alle entfernen,Remove all,
 dynamic_filters_role_header,Funktionen,Functions,
+dynamic_filters_search_for_api_client_placeholder,Suche nach API-Applikation,Search for API client...,
+dynamic_filters_search_for_group_placeholder,Suche nach Gruppe...,Search for group...,
+dynamic_filters_search_for_user_placeholder,Suche nach User...,Search for user...,
 edit_custom_urls_back_to_collection,Zurück zum Set,Back to the set,
 edit_custom_urls_back_to_media_entry,Zurück zum Medieneintrag,Back to the media entry,
 edit_custom_urls_cancel,Abbrechen,Cancel,
@@ -442,6 +447,7 @@ pagination_infix, von , of ,Wo: Paginierung - Seitenanzeige (Zwischenbalken)
 pagination_postfix,,,Wo: Paginierung - Seitenanzeige (Zwischenbalken)
 pagination_selection_label,Seite auswählen,Select page,Wo: Paginierung - Seitenanzeige (Zwischenbalken)
 people_toolbar_header,Ähnliche Inhalte,Related items,
+permission_entrusted_to_api_client,Sichtbar für API-Applikationen,Visible to API clients,
 permission_entrusted_to_group,Sichtbar für Arbeitsgruppen,Visible to work groups,
 permission_entrusted_to_user,Sichtbar für Nutzer/innen,Visible to users,
 permission_name_edit_metadata,Metadaten editieren,Edit metadata,
