feat: add responsible delegation filter

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -203,6 +203,7 @@ dynamic_filters_person_header,Personen,Persons,
 dynamic_filters_remove_all_title,Alle entfernen,Remove all,
 dynamic_filters_role_header,Funktionen,Functions,
 dynamic_filters_search_for_api_client_placeholder,Suche nach API-Applikation,Search for API client...,
+dynamic_filters_search_for_delegation_placeholder,Suche nach Gruppe...,Search for group...,
 dynamic_filters_search_for_group_placeholder,Suche nach Gruppe...,Search for group...,
 dynamic_filters_search_for_user_placeholder,Suche nach User...,Search for user...,
 edit_custom_urls_back_to_collection,Zurück zum Set,Back to the set,
@@ -473,6 +474,7 @@ permissions_overview_yours_title,Ihre Berechtigungen,Your permissions,
 permissions_responsibility_title,Verantwortlichkeit,Responsibility,
 permissions_responsible_user_and_responsibility_group_title,Verantwortliche/r Nutzer/in / Verantwortungs-Gruppe,Responsible user / Responsibility group,
 permissions_responsible_user_and_responsibility_group_msg,Der/die verantwortliche/r Nutzer/in hat alle Berechtigungen zu den ausgewählten Inhalten und kann diese auch löschen.,The responsible user / responsibility group has all permissions for the selected content and can also delete it.,
+permissions_responsible_delegation_title,Verantwortungs-Gruppe,Responsibility group,
 permissions_responsible_user_title,Verantwortliche Person,Responsible user,
 permissions_table_cancel_btn,Abbrechen,Cancel,
 permissions_table_edit_btn,Bearbeiten,Edit,
