feat: accept delegation in workflow's configuration

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -820,7 +820,7 @@ workflow_common_settings_permissions_add_group,Gruppe hinzufügen,Add group,
 workflow_common_settings_permissions_add_user,Nutzer/innen hinzufügen,Add user,
 workflow_common_settings_permissions_read_public,Öffentlicher Zugriff (Internet),Public access (Internet),
 workflow_common_settings_permissions_read,Nur Leserechte,Only reading permissions,
-workflow_common_settings_permissions_responsible,Verantwortliche Person(en),Responsible user,
+workflow_common_settings_permissions_responsible,Verantwortliche/r Nutzer/in / Verantwortungs-Gruppe,Responsible user / responsibility group,
 workflow_common_settings_permissions_select_owner,Nutzer/innen oder Verantwortungs-Gruppen auswählen:,Select user or responsibility group,
 workflow_common_settings_permissions_select_user,Nutzer/innen auswählen,Select user,
 workflow_common_settings_permissions_title,Berechtigungen,Permissions,
