--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -835,8 +835,6 @@ workflow_edit_actions_finish,Abschliessen,Finish,
 workflow_edit_actions_finishing,Wird abgeschlossen…,Finish…,
 workflow_edit_actions_processing,Lädt…,Loading…,
 workflow_edit_actions_save_data,Speichern,Save,
-workflow_edit_actions_validate,Prüfen & Abschliessen…,Check & Finish…,
-workflow_edit_actions_validating,Wird geprüft…,Checking…,
 workflow_edit_add_md_by_metakey,Hinzufügen,Add,
 workflow_edit_adder_meta_key_already_used,Metadatum wird schon verwendet,Metakey already used,
 workflow_feature_title,Workflow,Workflow,
@@ -849,7 +847,7 @@ workflow_md_edit_is_common_nonempty," (gesetzt)"," (set)"
 workflow_md_edit_is_common,"Fixer Wert","Fixed value"
 workflow_md_edit_is_mandatory_explanation,"Alle enthaltenen Medieneinträge müssen einen Wert gesetzt haben, damit der Workflow abgeschlossen werden kann","All media entries contained must have a value set so that the Workflow can be completed"
 workflow_md_edit_is_mandatory,"Pflichtfeld","Mandatory field"
-workflow_md_edit_is_not_common,"Individuelle Vergabe","Individuelle Vergabe"
+workflow_md_edit_is_not_common,"Individuelle Vergabe","Individual assignment"
 workflow_md_edit_is_overridable,"…und dabei vorhandene Werte überschreiben","…and overwrite existing values"
 workflow_md_edit_scope,"Geltungsbereich","Scope"
 workflow_md_edit_scope_entry,"Einträge","Entries"
