feat: making a copy of media entry

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -303,6 +303,18 @@ media_entry_conversion_status_failed,Die Konvertierung ist fehlgeschlagen. Bitte
 media_entry_conversion_status_initialized,Die Konvertierung läuft. Bitte versuchen Sie es später noch einmal.,The media file is converting. Please try later.,
 media_entry_conversion_status_submitted,Die Konvertierung läuft. Bitte versuchen Sie es später noch einmal.,The media file is converting. Please try later.,
 media_entry_delete_success,Der Medieneintrag wurde gelöscht.,Media entry has been deleted.,
+media_entry_duplicator_configuration_annotate_as_new_version_of_post,erstellen,,
+media_entry_duplicator_configuration_annotate_as_new_version_of_pre,(Experte) Hinweis zu neuer Version inkl. Verlinkung zu,(Expert) Add annotation «new version of» and link to,
+media_entry_duplicator_configuration_copy_meta_data,Metadaten übertragen,Copy meta data,
+media_entry_duplicator_configuration_copy_permissions,Zugriffsberechtigungen übertragen,Copy permissions,
+media_entry_duplicator_configuration_copy_relations,Zusammenhänge übertragen (übergeordnete Sets und Favoriten),Copy relations (parent collections & favorites),
+media_entry_duplicator_configuration_move_custom_urls,(Experte) Sprechende Adresse (URL) übernehmen,(Expert) Move comprehensible Address (URL),
+media_entry_duplicator_configuration_instructions,Folgende Optionen können gewählt werden:,Choose options below:,
+media_entry_duplicator_custom_urls_already_moved,moved to the first successful upload!,moved to the first successful upload!,
+media_entry_duplicator_desc_post,zugewiesen.,by selected options.,
+media_entry_duplicator_desc_pre,"Die unten importierten Mediendateien bekommen die den nachfolgend gewählten Optionen entsprechenden Metadaten, Zugriffsberechtigungen, Beziehungen und weitere Einstellungen des aktuellen Medieneintrags","The media file to be imported below will get assigned meta data, permissions, relations and further settings from the actual media entry",
+media_entry_duplicator_md_title_suffix,(updated),(updated),
+media_entry_duplicator_new_version_of_label,Updated file,Updated file,
 media_entry_export_close,Schliessen,Close,
 media_entry_export_download,Exportieren,Download,
 media_entry_export_has_no_original,Sie verfügen für den Export der Originaldatei nicht über die notwendige Berechtigung.,You are not allowed to download the original file.,
@@ -322,6 +334,7 @@ media_entry_file_format_not_supported_2,können die Datei ,download the file,
 media_entry_file_format_not_supported_3,exportieren.,0,
 media_entry_file_information_title,Datei,File information,
 media_entry_media_import_gotodrafts,Medieneinträge vervollständigen,Complete media entries,
+media_entry_media_import_gotomediaentries,Weiter zum Medieneinträge,Continue to media entries,
 media_entry_media_import_gotoworkflow,Weiter zum Workflow,Continue to Workflow,
 media_entry_media_import_header,Medien importieren,Media upload,
 media_entry_media_import_box_header_a,,,
@@ -524,6 +537,7 @@ resource_action_media_entry_favor,Zu Favoriten hinzufügen,Add to favorites,
 resource_action_media_entry_manage_confidential_links,Vertrauliche Links verwalten,Manage Confidential Links,
 resource_action_media_entry_select_collection,Zu Sets hinzufügen / Aus Sets entfernen,Add to/remove from set,
 resource_action_media_entry_share,Medieneintrag teilen,Share media entry,
+resource_action_media_entry_update_file,Medieneintrag ersetzen,Replace media entry,
 resource_action_more_actions,Weitere Aktionen,Further actions,
 resource_action_show_in_admin,Zeige im Admin-Interface,Show in Admin Interface,
 resource_ask_delete_cancel,Abbrechen,Cancel,
