--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -390,7 +390,7 @@ meta_data_edit_media_entry_published,Der Medieneintrag wurde gespeichert und all
 meta_data_edit_media_entry_saved,Der Medieneintrag wurde gespeichert.,Media entry was saved.,
 meta_data_edit_media_entry_saved_missing,"Der Medieneintrag wurde gespeichert, aber es wurden nicht alle Pflichtfelder ausgefüllt.",Media entry was saved but there some mandatory data are missing.,
 meta_data_edit_more_data,Weitere Angaben,More data,
-meta_data_form_all_data,Alle Daten,Alle daten,
+meta_data_form_all_data,Alle Daten,All metadata,
 meta_data_form_cancel,Abbrechen,Cancel,
 meta_data_form_save,Speichern,Save,
 meta_data_form_saving,Die Metadaten werden gerade gespeichert. Dies kann einige Zeit in Anspruch nehmen. Bitte gedulden Sie sich und schliessen Sie das Fenster nicht.,Meta data are currently being saved. This will take some time. Please be patient and do not close the browser.,
