feat: show note about more filter options in 'all resources' view

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -574,6 +574,9 @@ resources_box_batch_actions_meta_data_batch_new,BETA:,BETA:,
 resources_box_batch_actions_meta_data_batch,Metadaten Stapelverarbeitung,Metadata Batch Processing,
 resources_box_deselect_all,Alle abwählen,Deselect all,
 resources_box_filter,Filtern,Filter,
+resources_box_filters_note_post,"aus, um weitere Filterkriterien anwenden zu können.","in the Action bar to see more filter options.",
+resources_box_filters_note_pre,Wählen Sie in der Aktionsleiste,Please select,
+resources_box_filters_note_or,oder,or,
 resources_box_new_search,Neue Suche,New search,
 resources_box_no_content,Keine Inhalte verfügbar,No items available.,
 resources_box_no_content_but_sets_1,Es gibt keine Medieneinträge für diese Suche. Es wurden aber ,There are no media entries related to this search process. But ,
