--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -334,7 +334,7 @@ media_entry_file_format_not_supported_2,können die Datei ,download the file,
 media_entry_file_format_not_supported_3,exportieren.,0,
 media_entry_file_information_title,Datei,File information,
 media_entry_media_import_gotodrafts,Medieneinträge vervollständigen,Complete media entries,
-media_entry_media_import_gotomediaentries,Weiter zum Medieneinträge,Continue to media entries,
+media_entry_media_import_gotomediaentries,Weiter zu Meine Medieneinträge,Continue to My media entries,
 media_entry_media_import_gotoworkflow,Weiter zum Workflow,Continue to Workflow,
 media_entry_media_import_header,Medien importieren,Media upload,
 media_entry_media_import_box_header_a,,,
