feat: delegations for single user permissions

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -478,6 +478,7 @@ permission_subject_title_apiapps,API-Applikationen,API clients,
 permission_subject_title_groups,Gruppen,Groups,
 permission_subject_title_public,Öffentlichkeit,Public,
 permission_subject_title_users,Nutzer/innen,Users,
+permission_subject_title_users_or_delegations,Nutzer/innen / Verantwortungs-Gruppen,Users / Responsibility Groups,
 permissions_batch_success,Berechtigungen wurden erfolgreich aktualisiert.,Permissions have been updated succesfully.,
 permissions_batch_title_post, Inhalten., Items.,
 permissions_batch_title_pre,Berechtigungen ändern von ,Edit permissions of ,
