feat: create a set from parent set page

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -102,6 +102,7 @@ collection_meta_data_header_prefix,Set editieren: ,Edit set:,
 collection_new_cancel,Abbrechen,Cancel,
 collection_new_create_set,Set erstellen,Create set,
 collection_new_dialog_title,Set erstellen,Create set,
+collection_new_dialog_parent_warning,The new created set will be added as a child to:,The new created set will be added as a child to:,
 collection_new_flash_successful,Set wurde erstellt.,Set was created.,
 collection_new_flash_title_needed,Titel ist ein Pflichtfeld.,Title is a mandatory field.,
 collection_new_header,Neues Set,New set,
@@ -519,6 +520,7 @@ release_changes_since_release,Änderungen seit dem letzen Release,Changes since 
 release_info,Release Info,Release info,
 release_local_git_version,Lokale Git Version,Local Git version,
 release_version,Entwicklungs-Version,Development version,
+resource_action_collection_create,Set erstellen,Create set,
 resource_action_collection_destroy,Set löschen,Delete set,
 resource_action_collection_disfavor,Aus Favoriten entfernen,Remove from favorites,
 resource_action_collection_edit_cover,Titelbild festlegen,Define set cover,
