extensible roles (optimizations)

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -425,7 +425,7 @@ meta_data_input_new_person_first_name,Vorname,First name,
 meta_data_input_new_person_last_name,Nachname,Last name,
 meta_data_input_new_person_pseudonym,Pseudonym,Pseudonym,
 meta_data_input_new_person_toggle,Neue Person oder Gruppe anlegen,Add new person or work group,
-meta_data_input_person_save,Speichern,Save,
+meta_data_input_person_save,Übernehmen,Apply,
 meta_data_input_json_err_prefix,Eingabefehler: ,Input error: ,
 meta_data_input_json_err_no_object,Wert ist nicht vom Typ 'Object'!,Value is not an 'Object'!,
 meta_data_meta_key_documentation_url,> Online-Hilfe,click link for details,
@@ -433,7 +433,8 @@ meta_data_meta_key_label,Schlüssel,Key,
 meta_data_role_add_another_btn,Weitere Funktion hinzufügen,Add another function,
 meta_data_role_add_btn,Funktion hinzufügen,Add a function,
 meta_data_role_add_heading,Funktion hinzufügen zu ,Add a function to,
-meta_data_role_choose_label,Funktion auswählen,Choose the function,
+meta_data_role_choose_label,Wählen Sie eine Funktion aus der Liste,Choose a function from the list,
+meta_data_extensible_role_choose_label,Wählen Sie eine Funktion aus der Liste oder ergänzen Sie die Liste mit der gewünschten Funktion. Mit Enter die Eingabe abschliessen.,Choose a function from the list or enter the function and press Enter,
 meta_data_role_edit_btn,Funktion bearbeiten,Edit function,
 meta_data_role_edit_heading,Funktion bearbeiten,Edit the function of,
 meta_data_role_remove_btn,Funktion entfernen,Remove function,
