chore: remove 'developer version' from release info

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -521,10 +521,9 @@ picture_alt_prefix,Bild: ,Picture:,Prefix für Titel von Bildern (hover-titel/Sc
 relations_parents_title,Übergeordnete Sets,Parents,
 relations_siblings_title,Benachbarte Sets,Siblings,
 relations_title,Zusammenhänge,Relations,
-release_changes_since_release,Änderungen seit dem letzen Release,Changes since last release,
+release_source_history,Source History,Source History,
 release_info,Release Info,Release info,
 release_local_git_version,Lokale Git Version,Local Git version,
-release_version,Entwicklungs-Version,Development version,
 resource_action_collection_create,Set erstellen,Create set,
 resource_action_collection_destroy,Set löschen,Delete set,
 resource_action_collection_disfavor,Aus Favoriten entfernen,Remove from favorites,
