add "read more" for lengthy descriptions

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -912,3 +912,5 @@ workflows_index_action_save,Speichern,Save,
 workflows_index_actions_show,Details anzeigen,Show details,
 workflows_index_header,Meine Workflows,My Workflows,
 media_entry_notice_new_versions,Für diesen Medieneintrag sind neuere Versionen vorhanden:,Newer versions are available for this media entry:,
+read_more_button,"Mehr anzeigen","Show more",
+read_less_button,"Weniger anzeigen","Show less",
