label username field as "email"

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -286,7 +286,7 @@ layout_mode_tiles,Kachel-Ansicht,Tile view,
 login_box_internal,Externe,External users,
 login_box_title,Anmelden,Log in,
 login_box_login_btn,Anmelden,Log in,
-login_box_email_or_login,Benutzername oder E-Mail,Username or email,
+login_box_email_or_login,E-Mail,Email,
 login_box_password,Passwort,Password,
 login_box_rememberme,Login merken,Remember me,
 login_box_username,Benutzername,User name,
