add notifications frontend

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -459,6 +459,11 @@ no_content_fallback,Keine Inhalte vorhanden.,No items available.,
 no_groups_fallback,Keine Arbeitsgruppen vorhanden.,No work groups available.,
 no_keywords_fallback,Keine Schlagworte vorhanden.,No keywords available.,
 no_relations_title,Es wurden keine Zusammenhänge gefunden.,No relations found.,
+notifications_title_transfer_responsibility,Verantwortlichkeit übertragen,Transfer responsibility,
+notifications_message_transfer_responsibility,"Verantwortlichkeit von %{resource} wurde von %{user} an Sie übertragen.","The responsibility for %{resource} was transferred from %{user} to you.",
+notifications_acknowledge_all,Alle Notifikationen löschen,Delete all notifications,
+notifications_acknowledge,Löschen,Delete,
+notifications_no_notifications,Keine Notifikationen vorhanden,No notifications present,
 pagination_nav_loadnext,Mehr laden,Load more,
 pagination_nav_nextloading,Mehr Inhalte werden geladen.,More items are being loaded.,
 pagination_nav_nextpage,Nächste Seite,Next page,Wo: Manuelle Paginierung (ohne Javascript-Auto-Nachladen)
@@ -694,7 +699,25 @@ share_uuid_url_hint_collection,"Wenn Sie explizit dieses Set teilen möchten, nu
 share_uuid_url_hint_exporter,Auch für den Madek-Exporter kopieren Sie diese URL.,Copy this address for the Madek Exporter as well.,
 share_uuid_url_hint_media_entry,"Wenn Sie explizit diesen Medieneintrag teilen möchten, nutzen Sie folgende URL.","If you explicitly want to share this media entry, use the following address.",
 share_uuid_url_subtitle,URL teilen,Share URL,
+settings_notifications_title,Notifikationen,Notifications,
+settings_notifications_info1,Notifikationen werden unter %{notifications} aufgeführt und optional per E-Mail verschickt.,Notifications are listed under %{notifications} and optionally sent via email.,
+settings_notifications_info2,Notifikationen werden nach 6 Monaten gelöscht,Notifications will be removed after 6 months,
+settings_notifications_info3,Die Einstellungen für die E-Mail-Notifikationen finden Sie nachstehend:,Choose your settings for e-mail notifications below:,
+settings_notifications_email_label,An folgende E-Mail-Adresse bekommen Sie Notifikationen zugestellt:,Notifications will be sent to the following e-mail address:,
+settings_notifications_language_label,Die E-Mails werden in folgender Sprache verschickt:,You will receive emails in,
+settings_notifications_language_de,Deutsch,German,
+settings_notifications_language_en,Englisch,English,
+settings_notifications_title_transfer_responsibility,Verantwortlichkeit übertragen,Transfer responsibility,
+settings_notifications_title_weather_report,Wetterbericht,Weather report,
+settings_notifications_email_frequency_label,In welcher Häufigkeit möchten Sie E-Mails erhalten?,Frequency of email notification:,
+settings_notifications_email_frequency_immediately,sofort,immediately,
+settings_notifications_email_frequency_daily,täglich (Zusammenfassung),daily (digest),
+settings_notifications_email_frequency_weekly,wöchentlich (Zusammenfassung),weekly (digest),
+settings_notifications_email_frequency_never,keine,none,
+settings_save_changes,Einstellungen speichern,Save settings,
+settings_saved_changes,Einstellungen wurden gespeichert,Settings have been saved,
 sitemap_activities,Aktivitäten,Activities,
+sitemap_notifications,Notifikationen,Notifications,
 sitemap_api,API,API,
 sitemap_clipboard,Stapelverarbeitung,Batch processing,
 sitemap_collections,Sets,Sets,
@@ -722,6 +745,7 @@ sitemap_my_unpublished,Unvollständige Medieneinträge,Incomplete media entries,
 sitemap_my_used_keywords,Schlagworte,Keywords,
 sitemap_search,Suche,Search,
 sitemap_tokens,Tokens,Tokens,
+sitemap_settings,Einstellungen,Settings,
 sitemap_vocabularies,Vokabulare,Vocabularies,
 confidential_links_help_title,Hinweise,Hints,
 sitemap_vocabulary,Vokabular,Vocabulary,
