feat: omit system groups in entrusted resources

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -667,6 +667,8 @@ resources_box_batch_person_widget_name,Name,Name,
 resources_box_batch_person_widget_add_group,Arbeitsgruppe einfügen,Add group,
 resources_box_batch_person_widget_tab_person,Person,Person,
 resources_box_batch_person_widget_tab_group,Gruppe,Group,
+resources_box_info_header_no_system_groups,In dieser Auflistung werden %{system_groups_name} nicht berücksichtigt.,%{system_groups_name} are not taken into account.,
+resources_box_info_header_system_groups_name,Systemgruppen,System groups,
 resources_section_show_all,Alle anzeigen →,Show all →,
 resources_type_all,Alle,All,
 responsibility_groups,Verantwortungs-Gruppen,Responsibility groups,
