fix: mark resource as deleted in admin mode

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -197,6 +197,7 @@ dashboard_create_media_entry_btn,Medien importieren,Upload media,
 dashboard_none_exist,Keine vorhanden.,There are none.,
 dashboard_show_all,Alle anzeigen,Show all,
 dashboard_title_head,Mein Archiv,My archive,
+deleted,gelöscht,deleted,
 dynamic_filters_any_values_title,Jegliche Werte,Any values,
 dynamic_filters_authorization,Berechtigung,Authorization,
 dynamic_filters_visibility,Sichtbarkeit,Accessability,
