ui support for via-delegation notifications + scalability

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -463,10 +463,18 @@ no_groups_fallback,Keine Arbeitsgruppen vorhanden.,No work groups available.,
 no_keywords_fallback,Keine Schlagworte vorhanden.,No keywords available.,
 no_relations_title,Es wurden keine Zusammenhänge gefunden.,No relations found.,
 notifications_title_transfer_responsibility,Verantwortlichkeit übertragen,Transfer responsibility,
-notifications_message_transfer_responsibility,"Verantwortlichkeit von %{resource} wurde von %{user} an Sie übertragen.","The responsibility for %{resource} was transferred from %{user} to you.",
+notifications_message_transfer_responsibility,"Verantwortlichkeit für %{resourceType} %{resource} wurde von %{user} an Sie übertragen.","The responsibility for %{resourceType} %{resource} was transferred from %{user} to you.",
+notifications_message_transfer_responsibility_via_delegation,"Verantwortlichkeit für %{resourceType} %{resource} wurde von %{user} an %{viaDelegation} übertragen.","The responsibility for %{resourceType} %{resource} was transferred from %{user} to %{viaDelegation}.",
+notifications_media_entry,Medieneintrag,media entry,
+notifications_collection,Set,set,
 notifications_acknowledge_all,Alle Notifikationen löschen,Delete all notifications,
+notifications_really_acknowledge_all,Wirklich alle löschen?,Really delete all?,
 notifications_acknowledge,Löschen,Delete,
-notifications_no_notifications,Keine Notifikationen vorhanden,No notifications present,
+notifications_acknowledge_date_tooltip,Alle Notifikationen vom %{date} löschen,Delete all notifications of %{date},
+notifications_no_notifications,Keine Einträge vorhanden,No entries present,
+notifications_section_expand,Alle anzeigen,Show all,
+notifications_section_collapse,Anzeige reduzieren,Reduce,
+notifications_section_show_more,Weitere Einträge anzeigen,Show more,
 pagination_nav_loadnext,Mehr laden,Load more,
 pagination_nav_nextloading,Mehr Inhalte werden geladen.,More items are being loaded.,
 pagination_nav_nextpage,Nächste Seite,Next page,Wo: Manuelle Paginierung (ohne Javascript-Auto-Nachladen)
