--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -807,12 +807,20 @@ transfer_responsibility_batch_success_media_entry_1a, Medieneintrag , media entr
 transfer_responsibility_batch_success_media_entry_1b, Medieneinträge, media entries,
 transfer_responsibility_batch_success_media_entry_2, die Verantwortlichkeit erfolgreich übertragen.,0,
 transfer_responsibility_cancel,Abbrechen,Cancel,
-transfer_responsibility_person_will_receive_1,"Sie, ","You, ",
-transfer_responsibility_person_will_receive_2,", behalten folgende Berechtigungen:",", are retaining the following permissions:",
+transfer_responsibility_currently_responsible,Bisher verantwortlich,Currently responsible,
+transfer_responsibility_to,Verantwortlichkeit übertragen auf,Transfer responsibility to,
+transfer_responsibility_for_1_media_entry,für 1 Medieneintrag,for 1 media entry,
+transfer_responsibility_for_n_media_entries,für %{nofResources} Medieneinträge,for %{nofResources} media entries,
+transfer_responsibility_for_1_collection,für 1 Set,for %{nofResources} set,
+transfer_responsibility_for_n_collections,für %{nofResources} Sets,for %{nofResources} sets,
+transfer_responsibility_multiple_will_receive,Die bisher Verantwortlichen behalten folgende Berechtigungen:,The ones currently responsible are retaining the following permissions:,
+transfer_responsibility_single_will_receive,%{name} behält folgende Berechtigungen:,%{name} is retaining the following permissions:,
 transfer_responsibility_submit,Übertragen,Transfer,
 transfer_responsibility_success_collection,Sie haben die Verantwortlichkeit für das Set erfolgreich übertragen.,You have successfully transferred responsibility for the set.,
 transfer_responsibility_success_media_entry,Sie haben die Verantwortlichkeit für den Medieneintrag erfolgreich übertragen.,You have successfully transferred responsibility for the media entry.,
-transfer_responsibility_title,Verantwortlichkeit auf folgende/n Nutzer/in oder Verantwortungs-Gruppe übertragen,Transfer responsibility to the following user or responsibility group,
+transfer_responsibility_title_single,Verantwortlichkeit übertragen,Transfer responsibility,
+transfer_responsibility_title_batch,Verantwortlichkeit %{forNResources} übertragen,Transfer responsibility %{forNResources},
+transfer_responsibility_you_will_receive,"Sie, %{name}, behalten folgende Berechtigungen:","You, %{name}, are retaining the following permissions:",
 usage_data_created_at,Erstellt am,Created on,
 usage_data_import_at,Importiert am,Imported on,
 usage_data_import_by,Importiert durch,Imported by,
