feat: add 'last_change ASC' to sorting-feature (collection_sorting)

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -139,7 +139,8 @@ collection_sorting_created_at_asc,Sortieren nach Importierdatum aufsteigend,Sort
 collection_sorting_created_at_desc,Sortieren nach Importierdatum absteigend,Sort by import date descending,
 collection_sorting_manual_asc,Sortieren manuell aufsteigend,Sort manually ascending,
 collection_sorting_manual_desc,Sortieren manuell absteigend,Sort manually descending,
-collection_sorting_last_change,Sortieren nach letzter Änderung,Sort by date of update,
+collection_sorting_last_change_desc,Sortieren nach letzter Änderung absteigend,Sort by date of update descending,
+collection_sorting_last_change_asc,Sortieren nach letzter Änderung aufsteigend,Sort by date of update ascending,
 collection_sorting_title_asc,Sortieren nach Titel alphabetisch,Sort by title alphabetically,
 collection_sorting_title_desc,Sortieren nach Titel absteigend,"Sort by title alphabetically, but descending",
 collection_tab_main,Set,Set,
