chore: remove useless codetags (`TODO` etc.)

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -57,7 +57,7 @@ batch_destroy_resources_ask_4,(Die Inhalte von Sets werden nicht automatisch mit
 batch_destroy_resources_cancel,Abbrechen,Cancel,
 batch_destroy_resources_ok,OK,OK,
 batch_destroy_resources_success,Inhalte wurden erfolgreich gelöscht.,Items are deleted successfully.,
-batch_meta_data_edit,Metadaten für %{media_entry_count} Medieneinträge gleichzeitig editieren.,Edit metadata for %{media_entry_count} media entries at the same time.,TODO_cleanup_interpolation
+batch_meta_data_edit,Metadaten für %{media_entry_count} Medieneinträge gleichzeitig editieren.,Edit metadata for %{media_entry_count} media entries at the same time.,
 batch_remove_from_collection_cancel,Abbrechen,Cancel,
 batch_remove_from_collection_question_part_1,Möchten Sie die ausgewählten ,Do you want to remove the selected ,
 batch_remove_from_collection_question_part_2, Medieneinträge und , media entries and ,
@@ -134,7 +134,7 @@ collection_resource_selection_h_selection,Auswahl,Selection,
 collection_resource_selection_h_subtitle,Untertitel,Subtitle,
 collection_resource_selection_h_title,Titel,Title,
 collection_resource_selection_save,Auswahl speichern,Save selection,
-collection_select_collection_flash_result,Set aus %{removed_count} Set(s) entfernt. Zu %{added_count} Set(s) hinzugefügt.,Removed set from %{removed_count} set(s). Added set to %{added_count} set(s).,TODO_cleanup_interpolation
+collection_select_collection_flash_result,Set aus %{removed_count} Set(s) entfernt. Zu %{added_count} Set(s) hinzugefügt.,Removed set from %{removed_count} set(s). Added set to %{added_count} set(s).,
 collection_sorting_created_at_asc,Sortieren nach Importierdatum aufsteigend,Sort by import date ascending,
 collection_sorting_created_at_desc,Sortieren nach Importierdatum absteigend,Sort by import date descending,
 collection_sorting_manual_asc,Sortieren manuell aufsteigend,Sort manually ascending,
@@ -370,7 +370,7 @@ media_entry_relations_current,Aktueller Eintrag,Current entry,
 media_entry_relations_hint_text,"Der ausgewählte Medieneintrag ist mit Sets verknüpft. Diese Zusammenhänge wurden aktiv festgelegt als übergeordnet oder benachbart. Sie sehen hier sowohl eigene Sets, als auch solche, die andere Nutzer/innen mit Ihnen teilen.","The selected media entry is connected to sets. These relations are actively defined as a parent, a sibling or a child relationship. The sets displayed here are your own or are shared with you by other users.",
 media_entry_relations_parents_hint,Der ausgewählte Medieneintrag wurde diesen Sets hinzugefügt.,The selected media entry was added to these sets.,
 media_entry_relations_siblings_hint,Diese Sets wurden den gleichen Sets hinzugefügt wie der ausgewählte Medieneintrag.,These sets were added to the same sets as the selected media entry.,
-media_entry_select_collection_flash_result,Der Medieneintrag wurde aus %{removed_count} Set(s) entfernt und zu %{added_count} Set(s) hinzugefügt.,Media entry removed from %{removed_count} set(s) and added to %{added_count} set(s).,TODO_cleanup_interpolation,
+media_entry_select_collection_flash_result,Der Medieneintrag wurde aus %{removed_count} Set(s) entfernt und zu %{added_count} Set(s) hinzugefügt.,Media entry removed from %{removed_count} set(s) and added to %{added_count} set(s).,
 media_entry_siblings_section_title,Weitere Medieneinträge im selben Set,Other media entries in the same set,
 media_entry_siblings_parent_set,Übergeordnetes Set:,Parent set:,
 media_entry_tab_main,Medieneintrag,Media entry,
